# task-cli

./: .gitignore  README.md  pyproject.toml  task-cli.py  task_cli.py  task_list.json  tasks.py
scripts/: run.py
src/task_cli/: main.py  persistence.py
src/task_cli/entities/: task.py
src/task_cli/repositories/: json_repository.py
src/task_cli/services/: task_manager.py
tests/: test_json_repository.py  test_persistence.py  test_task_manager.py
