[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task_cli"
version = "1.0.0"
description = "Task tracker CLI"
authors = [{ name="Juan Camilo Wong", email="juancamilowongramirez@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "pandas",
    "pylint",
    "black[jupyter]",
    "pytest",
    "pytest-mock",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
task-cli = "task_cli.main:main"

[tool.pytest.ini_options]
pythonpath = [
  "."
]